--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,14 @@ a{
     color: #2BBBAD;
 }
 
-.menu-topo{
-    background-image: url("../imagens/background-nav.png");
+.menu-botao{
+    color: #161616;
+    margin-bottom: 16%;
+    position: block;
+}
+
+nav{
+    height: 0px;
 }
 
 .tamanho-menu{
@@ -31,7 +37,6 @@ hr{
 }
 
 .rodape{
-    width: 100%;
     text-align: center;
     margin-top: 5%;
     margin-bottom: 2%;
