--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ a{
 }
 
 .link{
-    color: #2BBBAD;
+    color: #446fe6;
 }
 
 .menu-botao{
@@ -40,4 +40,9 @@ hr{
     text-align: center;
     margin-top: 5%;
     margin-bottom: 2%;
+}
+
+.criterio{
+    border-style: solid;
+    border-width: 1px;
 }
